# rich-rst

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ELEMENTS.md  LICENSE  README.md  SECURITY.md  VENDORED.md  pyproject.toml  readthedocs.yaml  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: codeql.yml  publish.yaml  tests.yaml
demo/: README.md  directives.html  directives.rst  filename.html  introduction.html  introduction.rst  rich_introduction.html  roles.html  specification.html
docs/: requirements.txt
docs/source/: conf.py  demo.rst  demonstration.rst  documentation.rst  elements.rst  extension_api.rst  include_directive.rst  index.rst  limitations.rst  sphinx_heavy_demo.rst  styling.rst
docs/source/_extra/: directives.html  directives.txt  introduction.html  rich_introduction.html  rich_introduction.txt  roles.html  roles.txt  specification.html  specification.txt
docs/source/_static/: custom.css  custom.js  pygments.css.bak
docs/source/_templates/: page.html
rich_rst/: __init__.py  __main__.py
rich_rst/_vendor/: LICENSES.txt
rich_rst/_vendor/docutils/: __init__.py  core.py  frontend.py  io.py  nodes.py  statemachine.py
rich_rst/_vendor/docutils/languages/: __init__.py
rich_rst/_vendor/docutils/parsers/: __init__.py
rich_rst/_vendor/docutils/parsers/rst/: __init__.py  roles.py  states.py  tableparser.py
rich_rst/_vendor/docutils/parsers/rst/directives/: __init__.py  admonitions.py  body.py  html.py  images.py  misc.py  parts.py  references.py  tables.py
rich_rst/_vendor/docutils/parsers/rst/languages/: __init__.py
rich_rst/_vendor/docutils/readers/: __init__.py  doctree.py  standalone.py
rich_rst/_vendor/docutils/transforms/: __init__.py  frontmatter.py  misc.py  parts.py  references.py  universal.py
rich_rst/_vendor/docutils/utils/: __init__.py  _roman_numerals.py  code_analyzer.py
rich_rst/_vendor/docutils/writers/: __init__.py  null.py
tests/: conftest.py  test_admonitions.py  test_api.py  test_block_elements.py  test_code_blocks.py  test_coverage_gaps.py  test_csv_list_tables.py  test_definition_list.py  test_directives.py  test_inline_markup.py  test_lists.py  test_main.py  test_new_sphinx_directives.py  test_new_sphinx_roles.py  test_register_visitor_decorator.py  test_render_html_svg.py  test_roles.py  test_sphinx_directives.py  test_sphinx_roles.py  test_tables.py
tests/test_vectors/: abbreviation_acronym.rst  abbreviation_acronym_expected.html  admonitions.rst  admonitions_expected.html  block_quote_multi_paragraph.rst  block_quote_multi_paragraph_expected.html  bullet_list_expected.html  directives.rst  directives_expected.html  docinfo.rst  docinfo_expected.html  footnote_reference.rst  footnote_reference_expected.html  introduction_expected.html  line_block.rst  line_block_expected.html  list_with_code.rst  list_with_code_expected.html  nested_bullet_list.rst  nested_bullet_list_expected.html  nested_enumerated_list.rst  nested_enumerated_list_expected.html  paragraph_basic.rst  paragraph_basic_expected.html  rich_introduction_expected.html  roles_expected.html  specification_expected.html  sphinx_roles_compat.rst  sphinx_roles_compat_expected.html  table.rst  table_caption.rst  table_caption_expected.html  table_expected.html  topic.rst  topic_expected.html
tools/: generate_demo_page.py  vendor_docutils.py
