[metadata]
name = rich-rst
version = attr: rich_rst.__version__
author = Wasi Master
author_email = arianmollik323@gmail.com
description = A beautiful reStructuredText renderer for rich
keywords =
    richrst
    restructuredtextrich restructuredtextrich-restructuredtextrich rstrich-rst
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English

[options]
packages = rich_rst
install_requires = docutils
python_requires = >=3.6