[metadata]
name = rich-rst
version = attr: rich_rst.__version__
author = Wasi Master
author_email = arianmollik323@gmail.com
description = A beautiful reStructuredText renderer for rich
url = https://wasi-master.github.io/rich-rst
keywords =
    richrst
    restructuredtextrich restructuredtextrich-restructuredtextrich rstrich-rst
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/wasi-master/rich-rst/issues
    Source = https://github.com/wasi-master/rich-rst
    Documentation = https://rich-rst.readthedocs.io/en/latest/
    Say Thanks = https://saythanks.io/to/wasi-master


classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English

[options]
packages = rich_rst
install_requires = docutils
python_requires = >=3.6